# discord-moderation-bot

./: .dockerignore  .env.example  Cargo.toml  Containerfile  Dockerfile  README.md  build.rs  container-compose.yaml  docker-compose.yml
src/: checks.rs  crates.rs  helpers.rs  main.rs  misc.rs  prefixes.rs  showcase.rs  types.rs
src/godbolt/: mod.rs  targets.rs
src/moderation/: mod.rs  slowmode.rs
src/playground/: api.rs  microbench.rs  misc_commands.rs  play_eval.rs  procmacro.rs  util.rs
