[package]
name = "cachyos_discord_bot"
version = "0.1.0"
authors = ["kangalioo", "technetos <mrgould93@gmail.com>", "Ivan Dardi <ivanbdardi@gmail.com>", "vnepogodin"]
edition = "2021"
license = "MIT"
build = "build.rs"
repository = "https://github.com/cachyos/discord-moderation-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
strip-ansi-escapes = "0.2" # To remove colors from rustc output from godbolt
chrono = "0.4" # To interact with serenity
# poise = { path = "../poise", features = ["collector"] }
poise = "0.6"
tokio = { version = "1.38", features = ["rt-multi-thread", "process"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
dotenv = "0.15.0"
image = { version = "0.25", default-features = false, features = ["png"] } # get a better computer meme rendering
imageproc = { version = "0.25", default-features = false } # get a better computer meme rendering
rusttype = { version = "0.9", default-features = false } # interact with imageproc
once_cell = "1.19"

# [patch.crates-io]
# poise = { git = "https://github.com/elkowar/poise", branch = "optimize-monomorphization" }
# serenity = { git = "https://github.com/elkowar/serenity", branch = "smaller_send_message" }

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
